[PSDK] - intsafe: use the correct type to check overflow in DEFINE_SAFE_ADD CORE-9946 #resolve

svn path=/trunk/; revision=68572